# FirstNN

./: .gitignore  CMakeLists.txt  convert_parquet_to_csv.py  copy_dlls.bat  llm_architecture_research_plan.md
src/: binary_classifier.cpp  clean_mnist.cpp  console_visualizer.h  hand_drawing.cpp  hand_drawing.h  improved_synthetic.cpp  main.cpp  manual_test.cpp  mnist_data_loader.cpp  mnist_data_loader.h  mnist_step2.cpp  mnist_visualizer.cpp  mnist_visualizer.h  multiclass_step1.cpp  parquet_mnist.cpp  real_mnist.cpp
